--- a/app/src/main/res/layout/activity_sensor_details.xml
+++ b/app/src/main/res/layout/activity_sensor_details.xml
@@ -6,4 +6,11 @@
     android:layout_height="match_parent"
     tools:context="com.woodvillage.sensortest.SensorDetailsActivity">
 
+    <TextView
+        android:id="@+id/sensor_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        tools:layout_editor_absoluteX="127dp"
+        tools:layout_editor_absoluteY="223dp" />
 </android.support.constraint.ConstraintLayout>
